// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkGridRow should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-grid__row bpk-grid__row--padded"
  >
    Contents
  </div>
</DocumentFragment>
`;

exports[`BpkGridRow should render correctly with "className" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-grid__row bpk-grid__row--padded my-custom-class"
  >
    Contents
  </div>
</DocumentFragment>
`;

exports[`BpkGridRow should render correctly with "debug" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-grid__row bpk-grid__row--padded"
  >
    Contents
  </div>
</DocumentFragment>
`;

exports[`BpkGridRow should render correctly with arbitrary attributes 1`] = `
<DocumentFragment>
  <div
    class="bpk-grid__row bpk-grid__row--padded"
    data-arbitrary-1="my-arbitrary-data"
    data-arbitrary-2="my-arbitrary-data"
  >
    Contents
  </div>
</DocumentFragment>
`;
